  
[metadata]
name = nbsvg
version = 0.1.0
author = Joao Felipe Pimentel
author_email = joaofelipenp@gmail.com
description = Convert Jupyter Notebook to SVG
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JoaoFelipe/nbsvg
project_urls =
    Bug Tracker = https://github.com/JoaoFelipe/nbsvg/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Text Processing
    Topic :: Text Processing :: General
    Topic :: Text Processing :: Markup
    Topic :: Utilities
    Intended Audience :: Developers
    Intended Audience :: Science/Research

[options]
packages = find: